[gd_scene load_steps=26 format=1]

[ext_resource path="res://Scripts/Background.gd" type="Script" id=1]
[ext_resource path="res://Textures/fondo.png" type="Texture" id=2]
[ext_resource path="res://Scripts/menu.gd" type="Script" id=3]
[ext_resource path="res://Textures/Buttons/botonJugar.png" type="Texture" id=4]
[ext_resource path="res://Textures/Buttons/botonJugarPress.png" type="Texture" id=5]
[ext_resource path="res://Textures/Buttons/botonJugarHover.png" type="Texture" id=6]
[ext_resource path="res://Textures/Buttons/botonArcade.png" type="Texture" id=7]
[ext_resource path="res://Textures/Buttons/botonArcadePress.png" type="Texture" id=8]
[ext_resource path="res://Textures/Buttons/botonArcadeHover.png" type="Texture" id=9]
[ext_resource path="res://Textures/Buttons/botonSalir.png" type="Texture" id=10]
[ext_resource path="res://Textures/Buttons/botonSalirPress.png" type="Texture" id=11]
[ext_resource path="res://Textures/Buttons/botonSalirHover.png" type="Texture" id=12]
[ext_resource path="res://Textures/Buttons/botonCreditos.png" type="Texture" id=13]
[ext_resource path="res://Textures/Buttons/botonCreditosPress.png" type="Texture" id=14]
[ext_resource path="res://Textures/Buttons/botonCreditosHover.png" type="Texture" id=15]
[ext_resource path="res://Music/Rolemusic_-_Itsumo_no_y_ni.ogg" type="AudioStream" id=16]
[ext_resource path="res://Music/Blip_Select5.wav" type="Sample" id=17]
[ext_resource path="res://Textures/Logo.png" type="Texture" id=18]
[ext_resource path="res://Textures/Buttons/music.png" type="Texture" id=19]
[ext_resource path="res://Textures/Buttons/musicpressed.png" type="Texture" id=20]
[ext_resource path="res://Textures/Buttons/musichover.png" type="Texture" id=21]
[ext_resource path="res://Textures/Buttons/sound.png" type="Texture" id=22]
[ext_resource path="res://Textures/Buttons/soundpressed.png" type="Texture" id=23]
[ext_resource path="res://Textures/Buttons/soundhover.png" type="Texture" id=24]

[sub_resource type="SampleLibrary" id=1]

samples/Bip = { "db":0.0, "pitch":1.0, "sample":ExtResource( 17 ) }

[node name="MainMenu" type="Node"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = true
script/script = ExtResource( 1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

motion/scale = Vector2( 1, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 1024, 1024 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]

transform/pos = Vector2( 1.22766, -1.22778 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false
region = true
region_rect = Rect2( 0, 0, 2048, 2048 )

[node name="ButtonContainer" type="VBoxContainer" parent="."]

anchor/top = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = 441.0
margin/right = 372.0
margin/bottom = -488.0
alignment = 0
script/script = ExtResource( 3 )

[node name="Play" type="TextureButton" parent="ButtonContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 361.0
margin/bottom = 182.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )
textures/hover = ExtResource( 6 )

[node name="Arcade" type="TextureButton" parent="ButtonContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 186.0
margin/right = 361.0
margin/bottom = 368.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
textures/hover = ExtResource( 9 )

[node name="Exit" type="TextureButton" parent="ButtonContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 372.0
margin/right = 361.0
margin/bottom = 554.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )
textures/pressed = ExtResource( 11 )
textures/hover = ExtResource( 12 )

[node name="Credits" type="TextureButton" parent="ButtonContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 558.0
margin/right = 361.0
margin/bottom = 740.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 13 )
textures/pressed = ExtResource( 14 )
textures/hover = ExtResource( 15 )

[node name="Puntuaciones" type="TextureButton" parent="ButtonContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 744.0
margin/right = 361.0
margin/bottom = 929.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 13 )
textures/pressed = ExtResource( 14 )
textures/hover = ExtResource( 15 )

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 16 )
stream/play = false
stream/loop = true
stream/volume_db = 5.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Sample" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 1.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="Control" type="Control" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 96.0
margin/right = -30.0
margin/bottom = 56.0

[node name="Sprite" type="Sprite" parent="Control"]

transform/pos = Vector2( 270.296, 64.1759 )
transform/scale = Vector2( 5.56904, 3.59878 )
texture = ExtResource( 18 )

[node name="Container" type="Container" parent="."]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 210.0
margin/top = 104.0
margin/right = 0.0
margin/bottom = 3.0

[node name="Music" type="TextureButton" parent="Container"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 194.0
margin/top = 79.0
margin/right = 122.0
margin/bottom = 7.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 19 )
textures/pressed = ExtResource( 20 )
textures/hover = ExtResource( 21 )

[node name="Sound" type="TextureButton" parent="Container"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 89.0
margin/top = 76.0
margin/right = 17.0
margin/bottom = 4.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 22 )
textures/pressed = ExtResource( 23 )
textures/hover = ExtResource( 24 )

[node name="Credits" type="PopupPanel" parent="."]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 416.0
margin/top = 265.0
margin/right = -924.0
margin/bottom = -192.0
popup/exclusive = false

[node name="RichTextLabel" type="RichTextLabel" parent="Credits"]

rect/scale = Vector2( 3.3, 3.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 29.0
margin/top = 56.0
margin/right = 418.0
margin/bottom = 177.0
bbcode/enabled = false
bbcode/bbcode = "Autores:\n\tÁngel Hamilton López: angehl@gmail.com\n\tHector Martín Armas: hector.martinar@gmail.com\n\t\nMúsica por:\n\tRolemusic: http://freemusicarchive.org/music/Rolemusic/\n"
visible_characters = -1

[node name="Scores" type="PopupPanel" parent="."]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 416.0
margin/top = 265.0
margin/right = -924.0
margin/bottom = -192.0
popup/exclusive = false

[node name="RichTextLabel" type="RichTextLabel" parent="Scores"]

rect/scale = Vector2( 3.3, 3.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 29.0
margin/top = 56.0
margin/right = 418.0
margin/bottom = 177.0
bbcode/enabled = false
bbcode/bbcode = "Autores:\n\tÁngel Hamilton López: angehl@gmail.com\n\tHector Martín Armas: hector.martinar@gmail.com\n\t\nMúsica por:\n\tRolemusic: http://freemusicarchive.org/music/Rolemusic/\n"
visible_characters = -1

[connection signal="mouse_enter" from="ButtonContainer/Play" to="ButtonContainer" method="_on_Play_mouse_enter"]

[connection signal="pressed" from="ButtonContainer/Play" to="ButtonContainer" method="_on_Play_pressed"]

[connection signal="mouse_enter" from="ButtonContainer/Arcade" to="ButtonContainer" method="_on_Arcade_mouse_enter"]

[connection signal="pressed" from="ButtonContainer/Arcade" to="ButtonContainer" method="_on_Arcade_pressed"]

[connection signal="mouse_enter" from="ButtonContainer/Exit" to="ButtonContainer" method="_on_Exit_mouse_enter"]

[connection signal="pressed" from="ButtonContainer/Exit" to="ButtonContainer" method="_on_Exit_pressed"]

[connection signal="mouse_enter" from="ButtonContainer/Credits" to="ButtonContainer" method="_on_Credits_mouse_enter"]

[connection signal="pressed" from="ButtonContainer/Credits" to="ButtonContainer" method="_on_Credits_pressed"]

[connection signal="mouse_enter" from="ButtonContainer/Puntuaciones" to="ButtonContainer" method="_on_Puntuaciones_mouse_enter"]

[connection signal="pressed" from="ButtonContainer/Puntuaciones" to="ButtonContainer" method="_on_Puntuaciones_pressed"]

[connection signal="mouse_enter" from="Container/Music" to="ButtonContainer" method="_on_Music_mouse_enter"]

[connection signal="pressed" from="Container/Music" to="ButtonContainer" method="_on_Music_pressed"]

[connection signal="mouse_enter" from="Container/Sound" to="ButtonContainer" method="_on_Sound_mouse_enter"]

[connection signal="pressed" from="Container/Sound" to="ButtonContainer" method="_on_Sound_pressed"]


